[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/SpriteSheets/Weapons/Bow/Sprite-arrow.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Weapons/Bow/Arrow.gd" type="Script" id=2]
[ext_resource path="res://SFX/Environment/dust1.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 40, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 120, 0, 40, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 40, 40 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "hit",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 3.5 )

[node name="Arrow" type="Area2D" groups=["Projectile"]]
z_index = 1
collision_layer = 0
collision_mask = 12
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 4 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.5, 0.5 )
shape = SubResource( 1 )

[node name="ExplodeAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 2.0
pitch_scale = 0.8
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Arrow_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
